# Course_work_OOP

./: .flake8  README.md  pyproject.toml
src/: additional_functions.py  class_API.py  class_Parser.py  class_abs_file_work.py  class_file_work.py  class_vacancies.py  user_interaction.py
tests/: test_additional_functions.py  test_class_API.py  test_class_file_work.py  test_class_vacancies.py
